--- a/src/pages/Acceuil/style/fifthsection.css
+++ b/src/pages/Acceuil/style/fifthsection.css
@@ -4,6 +4,7 @@
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  margin-bottom: 5%;
 }
 
 .card {
@@ -42,7 +43,7 @@ h1{
 }
 
 .card button {
-    background-color: #0c0c0c;
+ background-color: #0c0c0c;
     color: #fff;
     border: 2px solid #e1e4e7;
   
@@ -50,7 +51,7 @@ h1{
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
     font-size: 16px;
-    text-align: center; 
+    text-align: center;
 }
 
 .card button:hover {
